# CIPhR

./: .coverage  .env  .gitignore  HYBRID_WORKFLOW.md  README.md  main.yml  pyproject.toml  test_parsing.py
.github/workflows/: ciphr.yml  main.yml  test.yml
ciphr/: __main__.py  ciphr.py  ciphr_hybrid.py
ciphr/config/: config.py
ciphr/src/: arxiv_scraper.py  data_processor.py  llm_analyzer.py  mattermost_notifier.py  result_processor.py  utils.py  wordpress_publisher.py
output/: analysis_prompts.json  hepex.md  hepex_260925.md  llm_results.txt  papers_data.json
tests/: test_append_functionality.py  test_ciph.py  test_cli_integration.py  test_firecrawl.py  test_hybrid_workflow.py  test_workflow.py
